--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,6 @@
 body {
-    background-color: red;
-    color: red;
-    display: flex;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+    background: url('../images/test.png');
 }
