--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,17 @@
+@import './common.css';
+
+:root {
+  --baseColor: pink;
+}
+
 body {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-    background: url('../images/test.png');
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url('../images/test.png');
+  color: var(--baseColor);
+
+  & span {
+    display: flex;
+  }
 }
